--- a/src/LIM.WebApp/appsettings.Development.json
+++ b/src/LIM.WebApp/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "AppDbContext": "Host=dbsrv;port=5432;Database=lim;Username=lim_owner;Password=12345"
   }
 }
