--- a/src/LIM.Infrastructure/LIM.Infrastructure.csproj
+++ b/src/LIM.Infrastructure/LIM.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="EFCore.NamingConventions" Version="6.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.16" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.16" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
       <PackageReference Include="Serilog.Extensions" Version="2.2.2" />
