--- a/src/LIM.WebApp/LIM.WebApp.csproj
+++ b/src/LIM.WebApp/LIM.WebApp.csproj
@@ -11,6 +11,8 @@
         <PackageReference Include="Asp.Versioning.Http" Version="6.4.0" />
         <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="6.4.0" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="FluentValidation" Version="11.5.2" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
