--- a/src/LIM.WebApi/appsettings.Development.json
+++ b/src/LIM.WebApi/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "AppDbContext": "Host=dbsrv;port=5432;Database=lim;Username=lim_owner;Password=12345"
+    "AppDbContext": "Host=localhost;port=5432;Database=lim;Username=postgres;Password=Q1qq1q11q1"
   }
 }
