--- a/src/LIM.ApplicationCore/LIM.ApplicationCore.csproj
+++ b/src/LIM.ApplicationCore/LIM.ApplicationCore.csproj
@@ -16,4 +16,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.16" />
+    </ItemGroup>
+
 </Project>
