--- a/src/LIM.WebApi/appsettings.Development.json
+++ b/src/LIM.WebApi/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "AppDbContext": "Host=localhost;port=5432;Database=lim;Username=postgres;Password=Q1qq1q11q1"
+    "AppDbContext": "Host=localhost;port=5432;Database=lim;Username=postgres;Password=9acc-207a23e6f182"
   }
 }
